+; refactored cat tag

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -5568,7 +5568,6 @@
 "~^/Terrorism\+is\+not\+about\+Terror$" "/Terrorism-is-not-about-Terror";
 "~^/terrorism$" "/Terrorism-is-not-about-Terror";
 "~^/Terrorism$" "/Terrorism-is-not-about-Terror";
-"~^/docs/statistics/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/terrorism-is-not-effective$" "/Terrorism-is-not-Effective";
 "~^/Terrorism-is-not-effective$" "/Terrorism-is-not-Effective";
 "~^/Terrorism-is-Not-Effective$" "/Terrorism-is-not-Effective";
@@ -6128,7 +6127,6 @@
 "~^/docs/melatonin/hpmor$" "/hpmor";
 "~^/docs/melatonin/Modus$" "/Modus";
 "~^/docs/melatonin/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
-"~^/docs/melatonin/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/melatonin/The-Melancholy-of-Kyon$" "/The-Melancholy-of-Kyon";
 "~^/docs/Notes$" "/Notes";
 "~^/0bba5f11fb305b946ad5ae53724d6da258a1d4b5.html$" "https://market.android.com/details?id=phuc.entertainment.dualnback";
@@ -11535,7 +11533,7 @@
 "~^/docs/rotten.com/library/conspiracy/jasons/Silk-Road$" "/Silk-Road";
 "~^/docs/rotten.com/library/conspiracy/jasons/Story-Of-Your-Life$" "/Story-Of-Your-Life";
 "~^/docs/rotten.com/library/conspiracy/jasons/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
-"~^/docs/rotten.com/library/conspiracy/jasons/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
+"~^/docs/[a-km-z].*/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/rotten.com/library/conspiracy/jasons/The-Existential-Risk-of-Mathematical-Error$" "/The-Existential-Risk-of-Mathematical-Error";
 "~^/docs/rotten.com/library/conspiracy/jasons/The-Melancholy-of-Kyon$" "/The-Melancholy-of-Kyon";
 "~^/docs/rotten.com/library/conspiracy/jasons/Turing-complete$" "/Turing-complete";
@@ -11574,7 +11572,6 @@
 "~^/docs/iq/The-Melancholy-of-Subculture-Society$" "/The-Melancholy-of-Subculture-Society";
 "~^/docs/longevity/Book-reviews$" "/reviews/Books";
 "~^/docs/longevity/docs/eva/2003-rahxephoncomplete-anno-izubuchi$" "/docs/eva/2003-rahxephoncomplete-anno-izubuchi";
-"~^/docs/longevity/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/longevity/The-Melancholy-of-Kyon$" "/The-Melancholy-of-Kyon";
 "~^/docs/longevity/Timestamping$" "/Timestamping";
 "~^/docs/longevity/Tool-AI$" "/Tool-AI";
@@ -11599,7 +11596,6 @@
 "~^/docs/rotten.com/library/conspiracy/jasons/tags/Bitcoin$" "/tags/Bitcoin";
 "~^/docs/rotten.com/library/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/docs/genetics/selection/www.mountimprobable.com/zeo/ZMA$" "/zeo/ZMA";
-"~^/docs/genetics/selection/www.mountimprobable.com/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/genetics/selection/www.mountimprobable.com/2012-election-predictions$" "/2012-election-predictions";
 "~^/docs/genetics/selection/www.mountimprobable.com/An-Abortion-Dialogue$" "/An-Abortion-Dialogue";
 "~^/docs/genetics/selection/www.mountimprobable.com/Bakewell$" "/reviews/Bakewell";
@@ -12454,11 +12450,9 @@
 "~^/docs/rotten.com/library/occult/magic/docs/eva/2002-takeda-notenkimemoirs$" "/docs/eva/2002-takeda-notenkimemoirs";
 "~^/docs/rotten.com/library/occult/magic/Hunter$" "/Hunter";
 "~^/docs/rotten.com/library/occult/magic/Lewis-meditation$" "/Lewis-meditation";
-"~^/docs/rotten.com/library/occult/magic/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/rotten.com/Mail-delivery$" "/Mail-delivery";
 "~^/docs/sociology/Death-Note-Anonymity$" "/Death-Note-Anonymity";
 "~^/docs/sociology/docs/eva/2005-murakami$" "/docs/eva/2005-murakami";
-"~^/docs/sociology/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/statistics/DNB-meta-analysis$" "/DNB-meta-analysis";
 "~^/docs/statistics/DNM-archives$" "/DNM-archives";
 "~^/docs/statistics/docs/eva/2010-crc$" "/docs/eva/2010-crc";
@@ -12645,7 +12639,6 @@
 "~^/docs/www/Tanks$" "/Tanks";
 "~^/docs/www/Tea$" "/reviews/Tea";
 "~^/docs/www/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
-"~^/docs/www/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/www/The-3-Grenades$" "/The-3-Grenades";
 "~^/docs/www/The-Existential-Risk-of-Mathematical-Error$" "/The-Existential-Risk-of-Mathematical-Error";
 "~^/docs/www/The-Melancholy-of-Kyon$" "/The-Melancholy-of-Kyon";
@@ -12996,7 +12989,6 @@
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Spaced-repetition$" "/Spaced-repetition";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Sunk-cost$" "/Sunk-cost";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Tea$" "/reviews/Tea";
-"~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/The-3-Grenades$" "/The-3-Grenades";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/The-Existential-Risk-of-Mathematical-Error$" "/The-Existential-Risk-of-Mathematical-Error";
@@ -13324,7 +13316,6 @@
 "~^/docs/rotten.com/library/conspiracy/jasons/Ads$" "/Ads";
 "~^/docs/rotten.com/library/conspiracy/jasons/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Clone$" "/Clone";
-"~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Wikipedia-and-Dark-Side-Editing$" "/Wikipedia-and-Dark-Side-Editing";
 "~^/docs/statistics/Colder-Wars$" "/Colder-Wars";
 "~^/docs/statistics/fiction/Safecracker$" "/fiction/Safecracker";
@@ -19998,7 +19989,6 @@
 "~^/copyright/$" "/Copyright";
 "~^/Self-decrypti$" "/Self-decrypting-files";
 "~^/Notes/ws.*$" "/notes/index";
-"~^/.*/Terrorism-is-not-Effective$" "/Terrorism-is-not-Effective";
 "~^/TbcX8j8vBcoRqkb3a/link-2015-modafinil-user-survey.*$" "https://www.lesswrong.com/posts/TbcX8j8vBcoRqkb3a/link-2015-modafinil-user-survey";
 "~^/posts/TbcX8j8vBcoRqkb3a/link-2015-modafinil-user-survey.*$"  "https://www.lesswrong.com/posts/TbcX8j8vBcoRqkb3a/link-2015-modafinil-user-survey";
 "~^/file.*/Web-Pages/chain-letter/archive/le1927-06-04p1_Fl_q4d-w4.htm.*$" "http://www.silcom.com/~barnowl/chain-letter/archive/le1927-06-04p1_Fl_q4d-w4.htm";
