--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3438,3 +3438,82 @@ default "";
 "~^/docs/statistics/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf.*$" "/docs/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf";
 "~^/docs/statistics/1973-meshalkin-collectionofproblemsinprobabilitytheory.pdf.*$" "/docs/statistics/probability/1973-meshalkin-collectionofproblemsinprobabilitytheory.pdf";
 "~^/docs/statistics/1932-hotelling.pdf.*$" "/docs/statistics/probability/1932-hotelling.pdf";
+"~^/docs/cat/2017-01-02-catnipsurvey-conveniencesample.csv.*$" "/docs/cat/catnip/2017-01-02-catnipsurvey-conveniencesample.csv";
+"~^/docs/cat/2017-01-02-catnipsurvey-conveniencesample-long-clean.csv.*$" "/docs/cat/catnip/2017-01-02-catnipsurvey-conveniencesample-long-clean.csv";
+"~^/docs/cat/1950-pitt-romanceofnature-v2-ch18-thewildcat.pdf.*$" "/docs/cat/genetics/1950-pitt-romanceofnature-v2-ch18-thewildcat.pdf";
+"~^/docs/cat/1930-kuo.pdf.*$" "/docs/cat/psychology/1930-kuo.pdf";
+"~^/docs/cat/1938-kuo.pdf.*$" "/docs/cat/psychology/1938-kuo.pdf";
+"~^/docs/cat/2002-hall.pdf.*$" "/docs/cat/psychology/2002-hall.pdf";
+"~^/docs/cat/1999-bradshaw.pdf.*$" "/docs/cat/genetics/1999-bradshaw.pdf";
+"~^/docs/cat/2017-ottoni.pdf.*$" "/docs/cat/genetics/2017-ottoni.pdf";
+"~^/docs/cat/2019-garcia.pdf.*$" "/docs/cat/psychology/2019-garcia.pdf";
+"~^/docs/cat/2019-hart.pdf.*$" "/docs/cat/psychology/2019-hart.pdf";
+"~^/docs/cat/1944-herbert.pdf.*$" "/docs/cat/psychology/1944-herbert.pdf";
+"~^/docs/cat/1969-chesler.pdf.*$" "/docs/cat/psychology/1969-chesler.pdf";
+"~^/docs/cat/1975-clark.pdf.*$" "/docs/cat/genetics/1975-clark.pdf";
+"~^/docs/cat/1979-sherry.pdf.*$" "/docs/cat/catnip/1979-sherry.pdf";
+"~^/docs/cat/1986-childs.pdf.*$" "/docs/cat/psychology/1986-childs.pdf";
+"~^/docs/cat/1989-mellen.pdf.*$" "/docs/cat/genetics/1989-mellen.pdf";
+"~^/docs/cat/1990-deweerd.pdf.*$" "/docs/cat/psychology/1990-deweerd.pdf";
+"~^/docs/cat/1992-mellen.pdf.*$" "/docs/cat/psychology/1992-mellen.pdf";
+"~^/docs/cat/1992-carlstead.pdf.*$" "/docs/cat/psychology/1992-carlstead.pdf";
+"~^/docs/cat/1995-trudgian.pdf.*$" "/docs/biology/1995-trudgian.pdf";
+"~^/docs/cat/1996-ledger.pdf.*$" "/docs/cat/psychology/1996-ledger.pdf";
+"~^/docs/cat/2021-smith.pdf.*$" "/docs/cat/psychology/2021-smith.pdf";
+"~^/docs/cat/2021-carlisle.pdf.*$" "/docs/cat/psychology/2021-carlisle.pdf";
+"~^/docs/cat/2020-kays.pdf.*$" "/docs/cat/psychology/2020-kays.pdf";
+"~^/docs/cat/2020-li.pdf.*$" "/docs/cat/psychology/2020-li.pdf";
+"~^/docs/cat/2019-delgado.pdf.*$" "/docs/cat/psychology/2019-delgado.pdf";
+"~^/docs/cat/2019-jones.pdf.*$" "/docs/cat/psychology/2019-jones.pdf";
+"~^/docs/cat/2019-kirk.pdf.*$" "/docs/cat/psychology/2019-kirk.pdf";
+"~^/docs/cat/2018-lichman.pdf.*$" "/docs/cat/catnip/2018-lichman.pdf";
+"~^/docs/cat/2018-szenczi.pdf.*$" "/docs/cat/psychology/2018-szenczi.pdf";
+"~^/docs/cat/2017-suntirukpong.pdf.*$" "/docs/cat/psychology/2017-suntirukpong.pdf";
+"~^/docs/cat/2017-romani.pdf.*$" "/docs/cat/catnip/2017-romani.pdf";
+"~^/docs/cat/2017-suntar.pdf.*$" "/docs/cat/catnip/2017-suntar.pdf";
+"~^/docs/cat/2016-rodan.pdf.*$" "/docs/cat/psychology/2016-rodan.pdf";
+"~^/docs/cat/2015-amat.pdf.*$" "/docs/cat/psychology/2015-amat.pdf";
+"~^/docs/cat/2014-morrisanimalfoundation.pdf.*$" "/docs/cat/genetics/2014-morrisanimalfoundation.pdf";
+"~^/docs/cat/2014-volk.pdf.*$" "/docs/cat/psychology/2014-volk.pdf";
+"~^/docs/cat/2012-bradshaw-behaviourdomesticcat-ch11-undesiredbehavior.pdf.*$" "/docs/cat/psychology/2012-bradshaw-behaviourdomesticcat-ch11-undesiredbehavior.pdf";
+"~^/docs/cat/2012-bradshaw-behaviourdomesticcat-ch12-causesbehavioralchange.pdf.*$" "/docs/cat/psychology/2012-bradshaw-behaviourdomesticcat-ch12-causesbehavioralchange.pdf";
+"~^/docs/cat/2012-bradshaw-behaviourdomesticcat-ch3-mechanismsbehaviour.pdf.*$" "/docs/cat/psychology/2012-bradshaw-behaviourdomesticcat-ch3-mechanismsbehaviour.pdf";
+"~^/docs/cat/2012-bradshaw-behaviourdomesticcat-ch8-socialbehaviour.pdf.*$" "/docs/cat/psychology/2012-bradshaw-behaviourdomesticcat-ch8-socialbehaviour.pdf";
+"~^/docs/cat/2012-moller.pdf.*$" "/docs/cat/psychology/2012-moller.pdf";
+"~^/docs/cat/2011-volk.pdf.*$" "/docs/cat/psychology/2011-volk.pdf";
+"~^/docs/cat/2011-marchei.pdf.*$" "/docs/cat/genetics/2011-marchei.pdf";
+"~^/docs/cat/2011-monterroso.pdf.*$" "/docs/cat/catnip/2011-monterroso.pdf";
+"~^/docs/cat/2011-vanderhurk.pdf.*$" "/docs/cat/catnip/2011-vanderhurk.pdf";
+"~^/docs/cat/2009-driscoll.pdf.*$" "/docs/cat/genetics/2009-driscoll.pdf";
+"~^/docs/cat/2008-ellis.pdf.*$" "/docs/cat/psychology/2008-ellis.pdf";
+"~^/docs/cat/2008-seawright.pdf.*$" "/docs/cat/psychology/2008-seawright.pdf";
+"~^/docs/cat/2007-geigy.pdf.*$" "/docs/cat/genetics/2007-geigy.pdf";
+"~^/docs/cat/2005-miklosi.pdf.*$" "/docs/cat/psychology/2005-miklosi.pdf";
+"~^/docs/cat/2005-bernstein.pdf.*$" "/docs/cat/psychology/2005-bernstein.pdf";
+"~^/docs/cat/2004-nicastro.pdf.*$" "/docs/cat/psychology/2004-nicastro.pdf";
+"~^/docs/cat/2003-curtis.pdf.*$" "/docs/cat/psychology/2003-curtis.pdf";
+"~^/docs/cat/2003-siegford.pdf.*$" "/docs/cat/psychology/2003-siegford.pdf";
+"~^/docs/cat/2002-lowe.pdf.*$" "/docs/cat/psychology/2002-lowe.pdf";
+"~^/docs/cat/2002-soennichsen.pdf.*$" "/docs/cat/psychology/2002-soennichsen.pdf";
+"~^/docs/cat/2000-bradshaw.pdf.*$" "/docs/cat/psychology/2000-bradshaw.pdf";
+"~^/docs/cat/2000-liberg.pdf.*$" "/docs/cat/psychology/2000-liberg.pdf";
+"~^/docs/cat/1999-braastad.pdf.*$" "/docs/cat/genetics/1999-braastad.pdf";
+"~^/docs/cat/2000-mendl.pdf.*$" "/docs/cat/genetics/2000-mendl.pdf";
+"~^/docs/cat/2000-turner.pdf.*$" "/docs/cat/psychology/2000-turner.pdf";
+"~^/docs/cat/1999-bradshaw-2.pdf.*$" "/docs/cat/psychology/1999-bradshaw-2.pdf";
+"~^/docs/cat/1999-andersen.pdf.*$" "/1999-andersen.pdf";
+"~^/docs/cat/1999-sandem.pdf.*$" "/docs/cat/psychology/1999-sandem.pdf";
+"~^/docs/cat/1998-vandenbos.pdf.*$" "/docs/cat/psychology/1998-vandenbos.pdf";
+"~^/docs/cat/1994-rossi.pdf.*$" "/docs/cat/psychology/1994-rossi.pdf";
+"~^/docs/cat/1994-feldman.pdf.*$" "/docs/cat/psychology/1994-feldman.pdf";
+"~^/docs/cat/1983-sherry.pdf.*$" "/docs/cat/catnip/1983-sherry.pdf";
+"~^/docs/cat/1982-allaby-thecuriouscat.pdf.*$" "/docs/cat/psychology/1982-allaby-thecuriouscat.pdf";
+"~^/docs/cat/1981-sherry.pdf.*$" "/docs/cat/catnip/1981-sherry.pdf";
+"~^/docs/cat/1990-yurko.pdf.*$" "/docs/cat/genetics/1990-yurko.pdf";
+"~^/docs/cat/1991-tomkies-wildcats.pdf.*$" "/docs/cat/genetics/1991-tomkies-wildcats.pdf";
+"~^/docs/cat/1979-tomkies-liane.pdf.*$" "/docs/cat/genetics/1979-tomkies-liane.pdf";
+"~^/docs/cat/1978-tomkies-mywildernesswildcats.pdf.*$" "/docs/cat/genetics/1978-tomkies-mywildernesswildcats.pdf";
+"~^/docs/cat/1973-coiner.pdf.*$" "/docs/cat/catnip/1973-coiner.pdf";
+"~^/docs/cat/1968-smithers.pdf.*$" "/docs/cat/genetics/1968-smithers.pdf";
+"~^/docs/cat/1955-adler.pdf.*$" "/docs/cat/psychology/1955-adler.pdf";
+"~^/1999-andersen.pdf.*$" "/1999-andersen.pdf";
