addTag.hs: enable tag removal (to clean up the mess from merging the two tag systems + the reverse-link auto-tags having many page-level false positives)

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -20485,7 +20485,7 @@
 "~^/docs/silk-road/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-15.pdf.*$" "/docs/silk-road/william-pickard/index";
 "~^/docs/statistischolarcs/causality/2019-schellenberg.pdf.*$" "/docs/statistics/causality/2019-schellenberg.pdf";
 "~^/Lsd-microdosing.*$" "/LSD-microdosing";
-"~^/static/build/addtag.hs.*$" "/static/build/addTag.hs";
+"~^/static/build/addtag.hs.*$" "/static/build/changeTag.hs";
 "~^/docs/silk.*/favicon.ico$" "/static/img/favicon.ico";
 "~^/static/img/asterism-triplewhitestar-old.svg.*$" "/static/img/icons/asterism-triplewhitestar-old.svg";
 "~^/Scaling-hypothesi$" "/Scaling-hypothesis";
@@ -22332,7 +22332,7 @@
 "~^/docs/technology/2020-roscioli.pdf​%E2.*$" "/docs/technology/2020-roscioli.pdf​";
 "~^/posts/419070/ivc/6d52.*$" "https://superuser.com/posts/419070/ivc/6d52";
 "~^/docs/eva/@first-contact-with-a-sci-fi-event.*$" "/docs/eva/2002-takeda-notenkimemoirs#first-contact-with-a-sci-fi-event";
-"~^/static/addTag.hs.*$" "/static/build/addTag.hs";
+"~^/static/addTag.hs.*$" "/static/build/changeTag.hs";
 "~^/LoremIpsum.*$" "/Lorem";
 "~^/docs/www/crypko.ai/static/update_20190401/PFN_logo.png.*$" "https://crypko.ai/static/update_20190401/PFN_logo.png";
 "~^/remember.*$" "/Spaced-repetition";
