--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3517,3 +3517,70 @@ default "";
 "~^/docs/cat/1968-smithers.pdf.*$" "/docs/cat/genetics/1968-smithers.pdf";
 "~^/docs/cat/1955-adler.pdf.*$" "/docs/cat/psychology/1955-adler.pdf";
 "~^/1999-andersen.pdf.*$" "/1999-andersen.pdf";
+"~^/docs/cat/1960-kuo.pdf.*$" "/docs/cat/psychology/1960-kuo.pdf";
+"~^/docs/cat/2016-stelow.pdf.*$" "/docs/cat/psychology/2016-stelow.pdf";
+"~^/docs/cat/1998-aydin.pdf.*$" "/docs/cat/catnip/1998-aydin.pdf";
+"~^/docs/cat/1976-verberne.pdf.*$" "/docs/cat/catnip/1976-verberne.pdf";
+"~^/docs/cat/1906-fairchild.pdf.*$" "/docs/cat/silvervine/1906-fairchild.pdf";
+"~^/docs/cat/1941-mcelvain.pdf.*$" "/docs/cat/catnip/1941-mcelvain.pdf";
+"~^/docs/cat/1952-morrisonscott.pdf.*$" "/docs/cat/genetics/1952-morrisonscott.pdf";
+"~^/docs/cat/1955-mcelvain.pdf.*$" "/docs/cat/catnip/1955-mcelvain.pdf";
+"~^/docs/cat/1960-regnier.pdf.*$" "/docs/cat/catnip/1960-regnier.pdf";
+"~^/docs/cat/1960-sakan.pdf.*$" "/docs/cat/catnip/1960-sakan.pdf";
+"~^/docs/cat/1962-mcgurk.pdf.*$" "/docs/cat/catnip/1962-mcgurk.pdf";
+"~^/docs/cat/1964-eisner.pdf.*$" "/docs/cat/catnip/1964-eisner.pdf";
+"~^/docs/cat/1965-sakan.pdf.*$" "/docs/cat/catnip/1965-sakan.pdf";
+"~^/docs/cat/1967-collard.pdf.*$" "/docs/cat/psychology/1967-collard.pdf";
+"~^/docs/cat/1967-regnier.pdf.*$" "/docs/cat/catnip/1967-regnier.pdf";
+"~^/docs/cat/1968-regnier.pdf.*$" "/docs/cat/catnip/1968-regnier.pdf";
+"~^/docs/cat/1969-jackson.pdf.*$" "/docs/cat/catnip/1969-jackson.pdf";
+"~^/docs/cat/1969-lynch.pdf.*$" "/docs/cat/catnip/1969-lynch.pdf";
+"~^/docs/cat/1970-waller.pdf.*$" "/docs/cat/catnip/1970-waller.pdf";
+"~^/docs/cat/1974-grastyan.pdf.*$" "/docs/cat/psychology/1974-grastyan.pdf";
+"~^/docs/cat/1975-albone.pdf.*$" "/docs/cat/silvervine/1975-albone.pdf";
+"~^/docs/cat/1976-preti.pdf.*$" "/docs/cat/catnip/1976-preti.pdf";
+"~^/docs/cat/1977-wemmer.pdf.*$" "/docs/cat/catnip/1977-wemmer.pdf";
+"~^/docs/cat/1979-bland.pdf.*$" "/docs/cat/catnip/1979-bland.pdf";
+"~^/docs/cat/1981-armitage.pdf.*$" "/docs/cat/genetics/1981-armitage.pdf";
+"~^/docs/cat/1983-vondendriesch.pdf.*$" "/docs/cat/genetics/1983-vondendriesch.pdf";
+"~^/docs/cat/1984-albone-mammaliansemiochemistry.pdf.*$" "/docs/cat/catnip/1984-albone-mammaliansemiochemistry.pdf";
+"~^/docs/cat/1984-bellesia.pdf.*$" "/docs/cat/catnip/1984-bellesia.pdf";
+"~^/docs/cat/1985-hart.pdf.*$" "/docs/cat/catnip/1985-hart.pdf";
+"~^/docs/cat/1986-turner.pdf.*$" "/docs/cat/genetics/1986-turner.pdf";
+"~^/docs/cat/1986-wilkinson.pdf.*$" "/docs/cat/psychology/1986-wilkinson.pdf";
+"~^/docs/cat/1988-bravo.pdf.*$" "/docs/cat/psychology/1988-bravo.pdf";
+"~^/docs/cat/1988-tucker.pdf.*$" "/docs/cat/catnip/1988-tucker.pdf";
+"~^/docs/cat/1993-mellen.pdf.*$" "/docs/cat/catnip/1993-mellen.pdf";
+"~^/docs/cat/1995-mccune.pdf.*$" "/docs/cat/psychology/1995-mccune.pdf";
+"~^/docs/cat/2000-mills.pdf.*$" "/docs/cat/psychology/2000-mills.pdf";
+"~^/docs/cat/2001-hendriks.pdf.*$" "/docs/cat/biology/2001-hendriks.pdf";
+"~^/docs/cat/2002-cameronbeaumont.pdf.*$" "/docs/cat/genetics/2002-cameronbeaumont.pdf";
+"~^/docs/cat/2003-nicastro.pdf.*$" "/docs/cat/psychology/2003-nicastro.pdf";
+"~^/docs/cat/2003-pageat.pdf.*$" "/docs/cat/biology/2003-pageat.pdf";
+"~^/docs/cat/2004-buckley.pdf.*$" "/docs/cat/biology/2004-buckley.pdf";
+"~^/docs/cat/2004-say.pdf.*$" "/docs/cat/genetics/2004-say.pdf";
+"~^/docs/cat/2006-miyazaki-1.pdf.*$" "/docs/cat/biology/2006-miyazaki-1.pdf";
+"~^/docs/cat/2006-miyazaki-2.pdf.*$" "/docs/cat/biology/2006-miyazaki-2.pdf";
+"~^/docs/cat/2006-zhao.pdf.*$" "/docs/cat/silvervine/2006-zhao.pdf";
+"~^/docs/cat/2007-driscoll.pdf.*$" "/docs/cat/genetics/2007-driscoll.pdf";
+"~^/docs/cat/2007-pozza.pdf.*$" "/docs/cat/psychology/2007-pozza.pdf";
+"~^/docs/cat/2008-casey.pdf.*$" "/docs/cat/psychology/2008-casey.pdf";
+"~^/docs/cat/2008-miyazaki.pdf.*$" "/docs/cat/biology/2008-miyazaki.pdf";
+"~^/docs/cat/2008-schlexer.pdf.*$" "/docs/cat/biology/2008-schlexer.pdf";
+"~^/docs/cat/2010-lilith.pdf.*$" "/docs/cat/biology/2010-lilith.pdf";
+"~^/docs/cat/2011-mohammadi.pdf.*$" "/docs/cat/catnip/2011-mohammadi.pdf";
+"~^/docs/cat/2011-zoran.pdf.*$" "/docs/cat/biology/2011-zoran.pdf";
+"~^/docs/cat/2012-heurich.pdf.*$" "/docs/cat/biology/2012-heurich.pdf";
+"~^/docs/cat/2012-soini.pdf.*$" "/docs/cat/biology/2012-soini.pdf";
+"~^/docs/cat/2013-arteaga.pdf.*$" "/docs/cat/biology/2013-arteaga.pdf";
+"~^/docs/cat/2013-ciaccio.pdf.*$" "/docs/cat/catnip/2013-ciaccio.pdf";
+"~^/docs/cat/2013-goggin.pdf.*$" "/docs/cat/catnip/2013-goggin.pdf";
+"~^/docs/cat/2014-apps.pdf.*$" "/docs/cat/biology/2014-apps.pdf";
+"~^/docs/cat/2017-vanhaaften.pdf.*$" "/docs/cat/psychology/2017-vanhaaften.pdf";
+"~^/docs/cat/2019-huck.pdf.*$" "/docs/cat/biology/2019-huck.pdf";
+"~^/docs/cat/2019-westropp.pdf.*$" "/docs/cat/biology/2019-westropp.pdf";
+"~^/docs/cat/2021-04-17-henry-doesyourcatsbuttholereallytouchallthesurfacesinyourhome.html.*$" "/docs/cat/psychology/2021-04-17-henry-doesyourcatsbuttholereallytouchallthesurfacesinyourhome.html";
+"~^/docs/cat/2021-hull.pdf.*$" "/docs/cat/biology/2021-hull.pdf";
+"~^/docs/cat/2021-johnson.pdf.*$" "/docs/cat/psychology/2021-johnson.pdf";
+"~^/docs/psychology/2013-kurzban.pdf.*$" "/docs/psychology/willpower/2013-kurzban.pdf";
+"~^/static/build/addTag.hs.*$" "/static/build/changeTag.hs";
