--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22907,6 +22907,25 @@
 "~^/docs/radiance/2002-scholz-radiance.djvu.*$" "/docs/radiance/2002-scholz-radiance.pdf";
 "~^/docs/link-bibliography/reviews/tea.*$" "/docs/link-bibliography/reviews/Tea";
 "~^/docs/link-bibliography/reviews/cultural-revolution.*$" "/docs/link-bibliography/reviews/Cultural-Revolution";
+"~^/Sidenotes-https.*$" "/Sidenotes";
+"~^/docs/ai/2021-jouppi.pd%5Cf.*$" "/docs/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/terrorism-is-not-about-terror@the-problem.*$" "/Terrorism-is-not-about-Terror#the-problem";
+"~^/images/design/sidenotes/2020-harvardlawreview-sid-enotes.png.*$" "/images/design/sidenotes/2020-harvardlawreview-sidenotes.png";
+"~^/images/design/sidenotes/2020-harvardlawreview-sidenotes--mobile.png.*$" "/images/design/sidenotes/2020-harvardlawreview-sidenotes-mobile.png";
+"~^/images/design/sidenotes/2020-11-obormot-sidebar-dand-col-lapsed.png.*$" "/images/design/sidenotes/2020-11-obormot-sidebar-dand-collapsed.png";
+"~^/images/design/sidenotes/2019-looijesteijn-sidenotes-mo-bile.png.*$" "/images/design/sidenotes/2019-looijesteijn-sidenotes-mobile.png";
+"~^/images/design/sidenotes/2016-inkandswitch-localfirstdesig-n-marginnotes.png.*$" "/images/design/sidenotes/2016-inkandswitch-localfirstdesign-marginnotes.png";
+"~^/images/design/sidenotes/2016-inkandswitch-localfirstd-esign-marginnotes-mobile.png.*$" "/images/design/sidenotes/2016-inkandswitch-localfirstdesign-marginnotes-mobile.png";
+"~^/images/design/sidenotes/2013-robertnystrom-gameprogra-mmingpatterns-doublebuffer-sidenotes.png.*$" "/images/design/sidenotes/2013-robertnystrom-gameprogrammingpatterns-doublebuffer-sidenotes.png";
+"~^/images/design/sidenotes/2013-robertnystrom-gameprogram-mingpatterns-doublebuffer-sidenotes-mobile.png.*$" "/images/design/sidenotes/2013-robertnystrom-gameprogrammingpatterns-doublebuffer-sidenotes-mobile.png";
+"~^/images/design/sidenotes/2013-matthewbutterick-practi-caltypography-webemailaddresses-marginnote.png.*$" "/images/design/sidenotes/2013-matthewbutterick-practicaltypography-webemailaddresses-marginnote.png";
+"~^/images/design/sidenotes/2013-matthewbutterick-pract-icaltypography-webemailaddresses-marginnote-mobile.png.*$" "/images/design/sidenotes/2013-matthewbutterick-practicaltypography-webemailaddresses-marginnote-mobile.png";
+"~^/images/design/2021-03-30-sidenotes-gwernnet-popin-s.png.*$" "/images/design/2021-03-30-sidenotes-gwernnet-popins.png";
+"~^/Danbooru2020\?.*$" "/Danbooru2021#danbooru2020";
+"~^/haskell/redirect-bot.hs.*$" "/haskell/Redirect-bot.hs";
+"~^/docs/www/bldgblog.com/favicon.ico.*$" "https://bldgblog.com/favicon.ico";
+"~^/docs/reinforcement-learning/deepmind/2020-deepmind--fullaccounts.pdf.*$" "/docs/reinforcement-learning/deepmind/2020-deepmind-fullaccounts.pdf";
+"~^/docs/modafinil/2007-killgore.pdf.*$" "/docs/modafinil/2006-killgore.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
