--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3584,3 +3584,30 @@ default "";
 "~^/docs/cat/2021-johnson.pdf.*$" "/docs/cat/psychology/2021-johnson.pdf";
 "~^/docs/psychology/2013-kurzban.pdf.*$" "/docs/psychology/willpower/2013-kurzban.pdf";
 "~^/static/build/addTag.hs.*$" "/static/build/changeTag.hs";
+"~^/docs/psychology/2016-orquin.pdf.*$" "/docs/psychology/willpower/2016-orquin.pdf";
+"~^/docs/psychology/2021-vohs.pdf.*$" "/docs/psychology/willpower/2021-vohs.pdf";
+"~^/docs/psychology/2021-ho.pdf.*$" "/docs/psychology/willpower/2021-ho.pdf";
+"~^/docs/psychology/2019-wenzel.pdf.*$" "/docs/psychology/willpower/2019-wenzel.pdf";
+"~^/docs/psychology/1927-zeigarnik.pdf.*$" "/docs/psychology/willpower/1927-zeigarnik.pdf";
+"~^/docs/longevity/2021-hanley.pdf.*$" "/docs/longevity/senolytic/2021-hanley.pdf";
+"~^/docs/ai/1977-agrawala-machinerecognitionofpatterns.pdf.*$" "/docs/ai/nn/1977-agrawala-machinerecognitionofpatterns.pdf";
+"~^/docs/ai/1993-harth-thecreativeloop.pdf.*$" "/docs/ai/nn/1993-harth-thecreativeloop.pdf";
+"~^/docs/ai/1997-dhar-intelligentdecisionsupportmethods.pdf.*$" "/docs/ai/nn/1997-dhar-intelligentdecisionsupportmethods.pdf";
+"~^/docs/ai/2000-cartwright-intelligentdataanalysisinscience.pdf.*$" "/docs/ai/nn/2000-cartwright-intelligentdataanalysisinscience.pdf";
+"~^/docs/ai/2020-jouppi.pdf.*$" "/docs/ai/scaling/hardware/2020-jouppi.pdf";
+"~^/docs/ai/2021-jouppi.pdf.*$" "/docs/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/docs/eva/2004-okada.page.*$" "/docs/eva/little-boy/2004-okada.page";
+"~^/docs/eva/2005-little-boy.page.*$" "/docs/eva/little-boy/2005-little-boy.page";
+"~^/docs/eva/2005-murakami.page.*$" "/docs/eva/little-boy/2005-murakami.page";
+"~^/docs/eva/2005-sawaragi.page.*$" "/docs/eva/little-boy/2005-sawaragi.page";
+"~^/docs/linkrot/2011-muflax-backup.pdf.*$" "/docs/linkrot/archiving/2011-muflax-backup.pdf";
+"~^/docs/eva/2005-murakami.pdf.*$" "/docs/eva/little-boy/2005-murakami.pdf";
+"~^/docs/eva/2005-sawaragi.pdf.*$" "/docs/eva/little-boy/2005-sawaragi.pdf";
+"~^/docs/eva/2004-okada.pdf.*$" "/docs/eva/little-boy/2004-okada.pdf";
+"~^/docs/culture/2008-winterbottom.pdf.*$" "https://www.ncbi.nlm.nih.gov/books/NBK76332/";
+"~^/2008-winterbottom.pdf.*$" "https://www.ncbi.nlm.nih.gov/books/NBK76332/";
+"~^/docs/ai/2021-martinezplumed.pdf.*$" "/docs/ai/scaling/economics/2021-martinezplumed.pdf";
+"~^/docs/ai/1997-hochreiter-2.pdf.*$" "/docs/ai/rnn/1997-hochreiter-2.pdf";
+"~^/docs/ai/1993-olazaran.pdf.*$" "/docs/ai/nn/1993-olazaran.pdf";
+"~^/docs/ai/1996-olazaran.pdf.*$" "/docs/ai/nn/1996-olazaran.pdf";
+"~^/docs/bitcoin/2016-kopp.pdf.*$" "/docs/bitcoin/nashx/2016-kopp.pdf";
