--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22926,6 +22926,8 @@
 "~^/docs/www/bldgblog.com/favicon.ico.*$" "https://bldgblog.com/favicon.ico";
 "~^/docs/reinforcement-learning/deepmind/2020-deepmind--fullaccounts.pdf.*$" "/docs/reinforcement-learning/deepmind/2020-deepmind-fullaccounts.pdf";
 "~^/docs/modafinil/2007-killgore.pdf.*$" "/docs/modafinil/2006-killgore.pdf";
+"~^/Scaling-hypothesis.p$" "/Scaling-hypothesis.page";
+"~^/docs/link-bibliography/notes/Emergenesis.*$" "/docs/genetics/heritable/emergenesis/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
