--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3611,3 +3611,5 @@ default "";
 "~^/docs/ai/1993-olazaran.pdf.*$" "/docs/ai/nn/1993-olazaran.pdf";
 "~^/docs/ai/1996-olazaran.pdf.*$" "/docs/ai/nn/1996-olazaran.pdf";
 "~^/docs/bitcoin/2016-kopp.pdf.*$" "/docs/bitcoin/nashx/2016-kopp.pdf";
+"~^/docs/ai/2021-04-12-jensenhuang-gtc2021keynote-eAn_oiZwUXA.en.vtt.txt.*$" "/docs/ai/scaling/moe/2021-04-12-jensenhuang-gtc2021keynote-eAn_oiZwUXA.en.vtt.txt";
+"~^/docs/eva/2005-little-boy.pdf.*$" "/docs/eva/little-boy/2005-little-boy.pdf";
