--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22928,6 +22928,16 @@
 "~^/docs/modafinil/2007-killgore.pdf.*$" "/docs/modafinil/2006-killgore.pdf";
 "~^/Scaling-hypothesis.p$" "/Scaling-hypothesis.page";
 "~^/docs/link-bibliography/notes/Emergenesis.*$" "/docs/genetics/heritable/emergenesis/index";
+"~^/docs/link-bibliography/notes/Bjorksten.*$" "/docs/longevity/john-bjorksten/index";
+"~^/docs/history/s-l-a-marshall/1989-hackworth-aboutface-slamarshallexcerpts.pdf\@page=37.*$" "/docs/history/s-l-a-marshall/1989-hackworth-aboutface-slamarshallexcerpts.pdf#page=37";
+"~^/docs/biology/compnews/abb90630.html.*$" "https://web.archive.org/web/20000229125251/http://www.iapac.org/compnews/abb90630.html";
+"~^/spacedrepitition.*$" "/Spaced-repetition";
+"~^/docs/psychology/writing/MTk.*$"  "/docs/psychology/writing/index";
+"~^/newsletter/2022/../index.html.*$" "/newsletter/2022/index";
+"~^/newsletter/2021/../index.html.*$" "/newsletter/2021/index";
+"~^/newsletter/2023/../index.html.*$" "/newsletter/2023/index";
+"~^/newsletter/2024/../index.html.*$" "/newsletter/2024/index";
+"~^/newsletter/2025/../index.html.*$" "/newsletter/2025/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27095,6 +27105,8 @@
 "~^/.*phpmyadmin.*$" "/static/404";
 "~^/base.cfm.*$" "/static/404";
 "~^/db_gwern.*$" "/static/404";
+"~^/\+\+theme++contextual.*$" "/static/404";
+"~^/[01][01][01]+\.html$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
