--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3613,3 +3613,10 @@ default "";
 "~^/docs/bitcoin/2016-kopp.pdf.*$" "/docs/bitcoin/nashx/2016-kopp.pdf";
 "~^/docs/ai/2021-04-12-jensenhuang-gtc2021keynote-eAn_oiZwUXA.en.vtt.txt.*$" "/docs/ai/scaling/moe/2021-04-12-jensenhuang-gtc2021keynote-eAn_oiZwUXA.en.vtt.txt";
 "~^/docs/eva/2005-little-boy.pdf.*$" "/docs/eva/little-boy/2005-little-boy.pdf";
+"~^/docs/longevity/semaglutide/2021-delprato.pdf.*$" "/docs/longevity/tirzepatide/2021-delprato.pdf";
+"~^/docs/longevity/semaglutide/2021-frias.pdf.*$" "/docs/longevity/tirzepatide/2021-frias.pdf";
+"~^/docs/longevity/semaglutide/2021-ludvik.pdf.*$" "/docs/longevity/tirzepatide/2021-ludvik.pdf";
+"~^/docs/longevity/semaglutide/2021-rosenstock.pdf.*$" "/docs/longevity/tirzepatide/2021-rosenstock.pdf";
+"~^/docs/longevity/semaglutide/2022-dahl.pdf.*$" "/docs/longevity/tirzepatide/2022-dahl.pdf";
+"~^/docs/economics/2000-hanson.pdf.*$" "/docs/economics/automation/2000-hanson.pdf";
+"~^/docs/genetics/heritable/2019-xing.pdf.*$" "/docs/genetics/heritable/rare-variants/2019-xing.pdf";
