--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22938,6 +22938,13 @@
 "~^/newsletter/2023/../index.html.*$" "/newsletter/2023/index";
 "~^/newsletter/2024/../index.html.*$" "/newsletter/2024/index";
 "~^/newsletter/2025/../index.html.*$" "/newsletter/2025/index";
+"~^/docs/sociology/2003-murr$" "/docs/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/Fake-Journal-Club-y.*$" "/Fake-Journal-Club";
+"~^/graves-of-the-fireflies.*$" "https://en.wikipedia.org/wiki/Grave_of_the_Fireflies";
+"~^/RmF.*$" "/index";
+"~^/docs/statistics/deciCsion/1972-savage-foundationsofstatistics.pdf.*$" "/docs/statistics/decision/1972-savage-foundationsofstatistics.pdf";
+"~^/docs/silk-road/2020-jeziorowski-1.pdf.*$" "/docs/silk-road/2020-jeziorowski.pdf";
+"~^/docs/www/www.codinghorror.com/9dd80f1d2afb04bc67c4a551f25ad3f5ec933a36.html P.*$" "/docs/www/www.codinghorror.com/9dd80f1d2afb04bc67c4a551f25ad3f5ec933a36.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
