--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22962,6 +22962,12 @@
 "~^/docs/existential-risk/favicon.ico.*$" "/static/img/favicon.ico";
 "~^/docs/eva/2002-takeda-notenkimemoirs@first-contact-with-a-sci-fi-event.*$" "/docs/eva/2002-takeda-notenkimemoirs#first-contact-with-a-sci-fi-event";
 "~^/Danbooru2020.page.*$" "/Danbooru2021.page";
+"~^/Scaling-hypothezis.*$" "/Scaling-hypothesis";
+"~^/fiction/Clipp$" "/fiction/Clippy";
+"~^/docs/index/iq/ses.*$" "/docs/iq/ses/index";
+"~^/iq/ses/index.html.*$" "/docs/iq/ses/index";
+"~^/iq/ses$" "/docs/iq/ses/index";
+"~^/docs/index/iq$" "/docs/iq/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27144,6 +27150,7 @@
 "~^/shorl.com%.*$" "/static/404";
 "~^/quitonce.net.*$" "/static/404";
 "~^/my_alfa.*$" "/static/404";
+"~^/[abdgu]+_[abdgu]+\.html$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
