--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3718,3 +3718,4 @@ default "";
 "~^/docs/darknet-markets/2017-rhumorbarbe.pdf.*$" "/docs/darknet-markets/alphabay/2017-rhumorbarbe.pdf";
 "~^/docs/darknet-markets/2021-bogensperger.pdf.*$" "/docs/darknet-markets/agora/2021-bogensperger.pdf";
 "~^/docs/darknet-markets/2020-yang.pdf.*$" "/docs/darknet-markets/agora/2020-yang.pdf";
+"~^/2018-lorenzodus.pdf.*$" "/docs/darknet-markets/silk-road/1/2018-lorenzodus.pdf";
