--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22968,6 +22968,15 @@
 "~^/iq/ses/index.html.*$" "/docs/iq/ses/index";
 "~^/iq/ses$" "/docs/iq/ses/index";
 "~^/docs/index/iq$" "/docs/iq/index";
+"~^/docs/psychology/1941/index.html.*$" "/docs/psychology/index";
+"~^/docs/spacedrepet.../n2$" "/docs/spaced-repetition/index";
+"~^/skeptic,-I-was-practicing-GraphPad-and-I-think-I-may-have-discovered-the.*$" "https://www.reddit.com/r/skeptic/comments/14qbn9/rskeptic_i_was_practicing_graphpad_and_i_think_i/";
+"~^/docs/darknet-markets/silk-road/2/3D.*$" "/docs/darknet-markets/silk-road/2/index";
+"~^/docs/darknet-markets/silk-road/1/3D.*$" "/docs/darknet-markets/silk-road/1/index";
+"~^/docs/darknet-markets/https:/journals.plos.org/plosone/article$" "https://journals.plos.org/plosone/";
+"~^/docs/darknet-markets/3D.*$" "/docs/darknet-markets/index";
+"~^/docs/darknet-markets/=3D.*$" "/docs/darknet-markets/index";
+"~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
