--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3719,3 +3719,28 @@ default "";
 "~^/docs/darknet-markets/2021-bogensperger.pdf.*$" "/docs/darknet-markets/agora/2021-bogensperger.pdf";
 "~^/docs/darknet-markets/2020-yang.pdf.*$" "/docs/darknet-markets/agora/2020-yang.pdf";
 "~^/2018-lorenzodus.pdf.*$" "/docs/darknet-markets/silk-road/1/2018-lorenzodus.pdf";
+"~^/docs/darknet-markets/2021-oosterman.pdf.*$" "/docs/darknet-markets/evolution/2021-oosterman.pdf";
+"~^/docs/darknet-markets/2013-06-07-premiumdutch-profile.htm.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-premiumdutch-profile.htm";
+"~^/docs/biology/2021-wanser.pdf.*$" "/docs/dog/2021-wanser.pdf";
+"~^/docs/biology/2008-sueda.pdf.*$" "/docs/dog/2008-sueda.pdf";
+"~^/docs/genetics/cloning/2018-oh.pdf.*$" "/docs/genetics/cloning/dog/2018-oh.pdf";
+"~^/docs/genetics/heritable/2015-hradecka.pdf.*$" "/docs/genetics/heritable/dog/2015-hradecka.pdf";
+"~^/docs/genetics/heritable/2007-liinamo.pdf.*$" "/docs/genetics/heritable/dog/2007-liinamo.pdf";
+"~^/docs/genetics/heritable/1997-wilsson.pdf.*$" "/docs/genetics/heritable/dog/1997-wilsson.pdf";
+"~^/docs/genetics/heritable/1995-willis.pdf.*$" "/docs/genetics/heritable/dog/1995-willis.pdf";
+"~^/docs/genetics/heritable/1965-dawson.pdf.*$" "/docs/genetics/heritable/dog/1965-dawson.pdf";
+"~^/docs/genetics/heritable/1965-scott-geneticsandthesocialbehaviorofthedog.pdf.*$" "/docs/genetics/heritable/dog/1965-scott-geneticsandthesocialbehaviorofthedog.pdf";
+"~^/docs/genetics/heritable/1982-goddard.pdf.*$" "/docs/genetics/heritable/dog/1982-goddard.pdf";
+"~^/docs/genetics/heritable/2017-vandenberg.pdf.*$" "/docs/genetics/heritable/dog/2017-vandenberg.pdf";
+"~^/docs/darknet-markets/2013-aldridge.pdf.*$" "/docs/darknet-markets/silk-road/1/2013-aldridge.pdf";
+"~^/docs/darknet-markets/2013-power.page.*$" "/docs/darknet-markets/silk-road/1/2013-power.page";
+"~^/docs/darknet-markets/2013-vanhout.pdf.*$" "/docs/darknet-markets/silk-road/1/2013-vanhout.pdf";
+"~^/docs/darknet-markets/2016-demant.pdf.*$" "/docs/darknet-markets/silk-road/2/2016-demant.pdf";
+"~^/docs/darknet-markets/2018-baravalle.pdf.*$" "/docs/darknet-markets/alphabay/2018-baravalle.pdf";
+"~^/docs/darknet-markets/2021-klomp.pdf.*$" "/docs/darknet-markets/silk-road/1/2021-klomp.pdf";
+"~^/docs/genetics/cloning/2016-oh.pdf.*$" "/docs/genetics/cloning/dog/2016-oh.pdf";
+"~^/docs/darknet-markets/2017-broseus.pdf.*$" "/docs/darknet-markets/evolution/2017-broseus.pdf";
+"~^/docs/darknet-markets/2019-morelato.pdf.*$" "/docs/darknet-markets/alphabay/2019-morelato.pdf";
+"~^/docs/darknet-markets/2019-veringmeier.pdf.*$" "/docs/darknet-markets/alphabay/2019-veringmeier.pdf";
+"~^/docs/darknet-markets/2020-cork.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-cork.pdf";
+"~^/docs/darknet-markets/2020-ganan.pdf.*$" "/2020-ganan.pdf";
